--- a/automations.yaml
+++ b/automations.yaml
@@ -106,4 +106,23 @@
     target:
       entity_id: switch.living_room
   mode: single
+- id: '16118283879'
+  alias: Doorbell alerts
+  description: Send configured alerts when the doorbell is pushed.
+  trigger:
+  - platform: event
+    event_type: esphome.doorbell_pressed
+  variables:
+    message: Someone at the door there is!
+  action:
+  - service: script.doorbell_alert_alexa
+    data:
+      message: '{{ message }}'
+  - service: script.doorbell_alert_helen
+    data:
+      message: '{{ message }}'
+  - service: script.doorbell_alert_james
+    data:
+      message: '{{ message }}'
+  mode: single
 ...
